# pandoc-sync

./: .gitignore  README.md  SPEC.md  Text-Pandoc-Sync-File.html  Text-Pandoc-Sync-Format.html  Text-Pandoc-Sync-Types.html  Text-Pandoc-Sync-Writer.html  Text-Pandoc-Sync.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-W.html  doc-index.html  doc-index.json  index.html  mini_Text-Pandoc-Sync-File.html  mini_Text-Pandoc-Sync-Format.html  mini_Text-Pandoc-Sync-Writer.html  mini_Text-Pandoc-Sync.html  package.yaml  pandoc-sync.cabal  pandoc-sync.dhall  pandoc-sync.haddock  pandoc-sync.txt  stack.yaml
app/: Sync.hs
dhall/: prelude.dhall  types.dhall
dhall/types/: Branch.dhall  BranchOptions.dhall  Config.dhall  EPUBVersion.dhall  Format.dhall  GlobalOptions.dhall  MarkdownType.dhall  Mode.dhall  PDFType.dhall  Reference.dhall  SlideShowType.dhall
src/: Orphans.hs  Orphans.html  Text.Pandoc.Lens.App.html  Text.Pandoc.Sync.File.html  Text.Pandoc.Sync.Format.html  Text.Pandoc.Sync.Types.html  Text.Pandoc.Sync.Writer.html  Text.Pandoc.Sync.html
src/Text/Pandoc/: Sync.hs
src/Text/Pandoc/Lens/: App.hs
src/Text/Pandoc/Sync/: File.hs  Format.hs  Types.hs  Writer.hs
