name:                pandoc-sync
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mstksg/pandoc-sync#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Pandoc.Sync
                       Text.Pandoc.Sync.Format
                       Text.Pandoc.Sync.File
                       Text.Pandoc.Sync.Writer
  other-modules:       Text.Pandoc.Lens.App
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base16-bytestring
                     , binary
                     , binary-orphans
                     , bytestring
                     , containers
                     , cryptohash-md5
                     , data-default
                     , dependent-sum
                     , directory
                     , filepath
                     , hashable
                     , hslogger
                     , lens
                     , megaparsec
                     , pandoc
                     , psqueues
                     , singletons
                     , skylighting
                     , text
                     , time
                     , transformers
                     , type-combinators
                     , witherable
  default-language:    Haskell2010
  ghc-options:         -Wall

executable pandoc-sync
  hs-source-dirs:      app
  main-is:             Sync.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-default
                     , directory
                     , hslogger
                     , lens
                     , optparse-applicative
                     , pandoc-sync
                     , yaml
  default-language:    Haskell2010

-- test-suite pandoc-sync-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , pandoc-sync
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/pandoc-sync
